Fixed Mobile screen alignment

--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -20,15 +20,20 @@ header {
 
 
 main {
-    padding-bottom: 70px;
+    padding-bottom: 10px;
 }
 
-.container-1 {
-    padding-bottom: 10px
+.home-container-1 {
+    padding-bottom: 5px
 }
 
-.container-2 {
-    padding-bottom: 220px
+.home-container-2 {
+    padding-bottom: 250px
+}
+
+#live-demo-1 {
+    font-size:40px;
+    padding-bottom: 130px
 }
 
 .text-general {
@@ -96,5 +101,4 @@ footer {
     background-color:rgba(0, 0, 0, .6);
     border: 3px solid rgba(0, 0, 0, .2);
     border-radius: 5px;
-
 }
